fix: add dto for public path update resp to fix reactive flux string deserialization
