# app/common/src/main/resources/openapi/gateway-config-api.yaml
@@ -160,9 +160,7 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  type: string
+                $ref: '#/components/schemas/PublicPathsRequestDto'
 
   /api/v1/config/security/role-path-access:
     put:
